objects/RouteSearch__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Location__c</fullName>
        <label>End Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Melbourne</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Canberra</fullName>
                </value>
                <value>
                    <fullName>Adelaide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Location__c</fullName>
        <label>Start Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Melbourne</fullName>
                </value>
                <value>
                    <fullName>Sydney</fullName>
                </value>
                <value>
                    <fullName>Canberra</fullName>
                </value>
                <value>
                    <fullName>Adelaide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RouteSearch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RouteSearch Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RouteSearches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>